fixed error icon alignments and table border

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -4,7 +4,7 @@
 .carbon-table__wrapper {
   background-color: $row-alt-color;
   border-radius: $tables__border-radius;
-  box-shadow: inset 0px 0px 0px 1px $border-color;
+  border: 1px solid $border-color;
   overflow: visible;
 }
 
