--- a/src/utils/decorators/input/input.scss
+++ b/src/utils/decorators/input/input.scss
@@ -186,7 +186,7 @@
   height: 15px;
   position: absolute;
   right: 5px;
-  top: 29px;
+  top: 28px;
 
   &:before {
     font-size: 20px;
@@ -206,7 +206,7 @@
 .common-input--label-inline {
   .icon-error {
     right: 5px;
-    top: 7px;
+    top: 6px;
   }
 }
 
